--- a/ActivosFijos/ActivosFijos.csproj
+++ b/ActivosFijos/ActivosFijos.csproj
@@ -106,6 +106,12 @@
     <Compile Include="frmActivosFijos.Designer.cs">
       <DependentUpon>frmActivosFijos.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTransferir.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTransferir.Designer.cs">
+      <DependentUpon>frmTransferir.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmCalcDepreciacion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -241,6 +247,9 @@
     <Compile Include="Models\Empleado.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\MovimientosActivos.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Parametro.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
@@ -262,6 +271,9 @@
     <Compile Include="Models\Usuarios.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\v_Activosfijos.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -279,6 +291,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmActivosFijos.resx">
       <DependentUpon>frmActivosFijos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTransferir.resx">
+      <DependentUpon>frmTransferir.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmCalcDepreciacion.resx">
       <DependentUpon>frmCalcDepreciacion.cs</DependentUpon>
@@ -400,6 +415,8 @@
     </Content>
     <Content Include="Resources\account-group_selected.png" />
     <Content Include="Resources\account_selected.png" />
+    <None Include="Resources\transfer.png" />
+    <None Include="Resources\down-arrow.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
